<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_red_dark"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.google.android.material.tabs.TabItem
        android:id="@+id/tab_rock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/rock"
        android:text="@string/tab_rock" />

    <com.google.android.material.tabs.TabItem
        android:id="@+id/tab_classic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/classic"
        android:text="@string/tab_classic" />

    <com.google.android.material.tabs.TabItem
        android:id="@+id/tab_pop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_bright"
        android:icon="@drawable/pop"
        android:text="@string/tab_pop" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>